# ipv6-route-listener

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  thread-route.sh
route_listener/: __init__.py  logger.py  main.py  packet_handler.py  route_configurator.py  scapy_handler.py
tests/: README.md  test_packet_filtering.py  test_router_advertisement.py  test_scapy_handler.py
tests/integration/: test_route_processing.py
